# SynAgent-Database-and-Scraping-Pipeline

./: .env.example  .gitignore  README.md
Agent tools/: extend_xgboost.py  precalc_fingerprints.py  reaction_clusters.py  train_xgboost.py
patent_ingestion_pipeline/: .env.example  ARCHITECTURE.md  auto_drain.py  drain_queue.py  fetch_and_parse.py  fetch_more.py  pyproject.toml  reaction_search_app.py  requirements.txt  reset_queue.py  run_agent.py  run_loop.py  run_worker.py  show_schema.py  status.py
patent_ingestion_pipeline/data/: chemistry_queries.txt
patent_ingestion_pipeline/src/patent_pipeline/: __init__.py  autonomous.py  bulk_downloader.py  chem_ner.py  cli.py  collector_pdf.py  config.py  crawl_tracker.py  crawler_registry.py  csv_ingestion.py  database.py  fetchers_bridge.py  llm_parser.py  models.py  ord_ingestion.py  ord_pb_ingestion.py  patent_search.py  patent_spider.py  pipeline.py  pubchem.py  storage_usb.py  webui.py
