[project]
name = "patent-ingestion-pipeline"
version = "0.1.0"
description = "Separate patent ingestion pipeline for collecting raw patent pages, parsing them locally, and building a searchable synthesis database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.24.0",
    "jinja2>=3.1.0",
    "scrapling>=0.4.8",
    "curl-cffi>=0.7.0",
    "msgspec>=0.18.0",
    "typer>=0.10.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
]

# Optional browser-based fallback (only if xhr/static fetch is insufficient):
#   python -m pip install "scrapling[fetchers]" msgspec
#   python -m playwright install chromium
[project.optional-dependencies]
browser = [
    "msgspec>=0.18.0",
    "playwright>=1.49.0",
]

[tool.uv.build-backend]
module-name = "patent_pipeline"

[project.scripts]
patent-pipeline = "patent_pipeline.cli:app"
synagent-patent-agent = "patent_pipeline.autonomous:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
